# TP_VpC2

./: .gitignore  README.md  TP_VpC2.ipynb  pyproject.toml  yolo_v11.ipynb
data/ground_truth/: SNMOT-108_posesion.csv
docs/decisiones/: dataset.md  deteccion-y-asignacion.md  modelo.md  posesion.md
docs/latex/IEEE-conference-template/: paper.tex
docs/presentacion/: index.html  notas.md
models/yolo11m/: results.csv
models/yolo26m/: results.csv
models/yolov8m/: results.csv
notebooks/: 00_train_yolo11_legacy.ipynb  00_train_yolo26_legacy.ipynb  01_train_detector.ipynb  02_compare_models.ipynb
scripts/: anotar_posesion.py  calibrar_posesion.py  diagnostico_posesion.py  download_soccernet.py  evaluar_posesion.py  generar_overlay.py  posesion_gt_ball.py  probar_posesion.py  probar_tracking.py  validar_equipos_embed.py  ver_equipos_embed.py
src/futbol_vpc/: __init__.py  config.py  detection.py  metrics.py  possession.py  team_assign.py  tracking.py  video.py
yolo11x/: results.csv
