[project]
name = "tp-vpc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "roboflow>=1.3.9",
    "ultralytics>=8.4.60",
]
